modules/vpc/main.tf
#Internet VPC
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  enable_classiclink   = "false"

  tags = {
    Name = var.env_code
  }
}

#Subnets
resource "aws_subnet" "main-public" {
  count = length(var.public_cidr_block)

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_cidr_block[count.index]
  map_public_ip_on_launch = "true"
  availability_zone       = var.az[count.index]

  tags = {
    Name = "${var.env_code}-public-${count.index + 1}"
  }
}

resource "aws_subnet" "main-private" {
  count = length(var.private_cidr_block)

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.private_cidr_block[count.index]
  map_public_ip_on_launch = "false"
  availability_zone       = var.az[count.index]

  tags = {
    Name = "${var.env_code}-private-${count.index + 1}"
  }
}

#Internet GW
resource "aws_internet_gateway" "main-gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = var.env_code
  }
}

#Public route table
resource "aws_route_table" "main-public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main-gw.id
  }

  tags = {
    Name = "${var.env_code}-public"
  }
}

#Public subnets route table association
resource "aws_route_table_association" "main-public" {
  count = length(var.public_cidr_block)

  subnet_id      = aws_subnet.main-public[count.index].id
  route_table_id = aws_route_table.main-public.id
}

#NAT GW
resource "aws_eip" "nat" {
  count = length(var.private_cidr_block)

  vpc = true
}

resource "aws_nat_gateway" "nat-gw" {
  count = length(var.private_cidr_block)

  allocation_id = aws_eip.nat[count.index].id
  subnet_id     = aws_subnet.main-public[count.index].id
  depends_on    = [aws_internet_gateway.main-gw]
}

#Private route table
resource "aws_route_table" "main-private" {
  count = length(var.private_cidr_block)

  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gw[count.index].id
  }

  tags = {
    Name = "${var.env_code}-private-${count.index + 1}"
  }
}

#Private subnets route association
resource "aws_route_table_association" "main-private" {
  count = length(var.private_cidr_block)

  subnet_id      = aws_subnet.main-private[count.index].id
  route_table_id = aws_route_table.main-private[count.index].id
}
